<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoyaltyActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Loyalty Manager"
        android:textSize="24dp"></TextView>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="16dp"
        android:id="@+id/currentPointLabel"></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter an amount"
        android:textSize="16dp"
        android:id="@+id/point2DeductBox"></EditText>
    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Cash In"
            android:id="@+id/cashInButton"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Transfer"
            android:id="@+id/transferButton"></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Buy Book"
            android:id="@+id/buyBookButton"></RadioButton>
    </RadioGroup>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/makeTransactionButton"
        android:text="Make Transaction"></Button>


</LinearLayout>